--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-boost": "^0.4.9",
+    "@apollo/client": "^3.3.5",
+    "@apollo/react-hooks": "^4.0.0",
+    "graphql": "^15.6.1",
+    "graphql-tag": "^2.11.0",
     "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
